Fix left logo alignment

--- a/app/assets/stylesheets/theme/bootstrap_and_overrides.sass
+++ b/app/assets/stylesheets/theme/bootstrap_and_overrides.sass
@@ -815,4 +815,4 @@ $component-offset-horizontal: 180px !default
   .navbar
     & > .container .navbar-brand,
     & > .container-fluid .navbar-brand
-      margin-left: -20px
+      margin-left: -22px
